--- a/TestFramework/TestFramework.csproj
+++ b/TestFramework/TestFramework.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3F900F31-2DEA-47F7-ABD4-988CEBA89727}</ProjectGuid>
+    <ProjectGuid>{D0E47712-C239-40BC-A293-D4D983E31662}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SiteFunctionalTests</RootNamespace>
-    <AssemblyName>SiteFunctionalTests</AssemblyName>
+    <RootNamespace>TestFramework</RootNamespace>
+    <AssemblyName>TestFramework</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,14 +34,6 @@
       <HintPath>..\packages\Coypu.2.10.0\lib\net40\Coypu.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Coypu.NUnit, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Coypu.NUnit.1.1.0\lib\net40\Coypu.NUnit.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -61,19 +53,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FunctionalTests\ITestBase.cs" />
-    <Compile Include="FunctionalTests\TestBase.cs" />
-    <Compile Include="FunctionalTests\UserAcceptanceTests.cs" />
+    <Compile Include="Constants\Constants.cs" />
+    <Compile Include="Extensions\BrowserExtentions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TestFramework\TestFramework.csproj">
-      <Project>{d0e47712-c239-40bc-a293-d4d983e31662}</Project>
-      <Name>TestFramework</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
