Extended framework with pages and page locators. Added test log output. Updated to Nunit 3.2.1.

--- a/SiteFunctionalTests/App.config
+++ b/SiteFunctionalTests/App.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
+    <add key="HomePageUrl" value="http://zacharytoliver.com/"/>
+    <add key="ResumePageUrl" value="http://zacharytoliver.com/resume.html"/>
     <add key="ArtifactFilePath" value="C:\ZacharyToliver\UserAcceptanceTests\Artifacts"/>
   </appSettings>
 </configuration>
