--- a/SiteFunctionalTests/SiteFunctionalTests.csproj
+++ b/SiteFunctionalTests/SiteFunctionalTests.csproj
@@ -34,12 +34,8 @@
       <HintPath>..\packages\Coypu.2.10.0\lib\net40\Coypu.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Coypu.NUnit, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Coypu.NUnit.1.1.0\lib\net40\Coypu.NUnit.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
