--- a/TestFramework/TestFramework.csproj
+++ b/TestFramework/TestFramework.csproj
@@ -34,7 +34,12 @@
       <HintPath>..\packages\Coypu.2.10.0\lib\net40\Coypu.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
@@ -55,10 +60,20 @@
   <ItemGroup>
     <Compile Include="Constants\Constants.cs" />
     <Compile Include="Extensions\BrowserExtentions.cs" />
+    <Compile Include="Extensions\ElementScopeExtentions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Locators\CssLocator.cs" />
+    <Compile Include="Locators\ILocator.cs" />
+    <Compile Include="Pages\HomePage.cs" />
+    <Compile Include="Pages\IPage.cs" />
+    <Compile Include="Pages\ResumePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
