Add reference to test framework in nuspec file

--- a/SiteFunctionalTests/functionaltests.nuspec
+++ b/SiteFunctionalTests/functionaltests.nuspec
@@ -19,7 +19,7 @@
     <file src="bin\Debug\*.dll" target="lib" />
     <file src="bin\Debug\*.pdb" target="lib" />
   </files>
-  <dependencies>
-    <dependency id="TestFramework" />
-  </dependencies>
+  <references>
+    <reference file="TestFramework.dll" />
+  </references>
 </package>
