--- a/SiteFunctionalTests/functionaltests.nuspec
+++ b/SiteFunctionalTests/functionaltests.nuspec
@@ -8,18 +8,15 @@
     <owners>Zachary Toliver</owners>
     <projectUrl>https://github.com/ztoliver/Functional-Test-Suite</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A framework that turns your normal strings, type names, enums and DateTime into a human friendly format and provides human friendly API for DateTime, TimeSpan etc</description>
-    <copyright>Copyright 2016 Mehdi Khalili</copyright>
+    <description>A test automation framework that allows easy interaction of web applications using components of Selenium and Coypu</description>
+    <copyright>Copyright 2016 Zachary Toliver</copyright>
     <licenseUrl>https://github.com/ztoliver/Functional-Test-Suite/blob/master/LICENSE</licenseUrl>
     <releaseNotes>
-      In this version we changed the library to Portable Class Library. There are no breaking changes.
+      In this version, references were removed from the nuspec file to address build issues.
     </releaseNotes>
   </metadata>
   <files>
     <file src="bin\Debug\*.dll" target="lib" />
     <file src="bin\Debug\*.pdb" target="lib" />
   </files>
-  <references>
-    <reference file="TestFramework.dll" />
-  </references>
 </package>
