Unit tests and included chromedriver in nuspec file.

--- a/SiteFunctionalTests/functionaltests.nuspec
+++ b/SiteFunctionalTests/functionaltests.nuspec
@@ -18,5 +18,6 @@
   <files>
     <file src="bin\Debug\*.dll" target="lib" />
     <file src="bin\Debug\*.pdb" target="lib" />
+    <file src="bin\Debug\chrome*" target="lib" />
   </files>
 </package>
