Update nuspec file - Include all files in package

--- a/SiteFunctionalTests/functionaltests.nuspec
+++ b/SiteFunctionalTests/functionaltests.nuspec
@@ -18,6 +18,7 @@
   <files>
     <file src="bin\Debug\*.dll" target="lib" />
     <file src="bin\Debug\*.pdb" target="lib" />
-    <file src="bin\Debug\chrome*" target="lib" />
+    <file src="bin\Debug\*.exe" target="lib" />
+    <file src="bin\Debug\**\*.*" target="lib" />
   </files>
 </package>
