--- a/SiteFunctionalTests/packages.config
+++ b/SiteFunctionalTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Coypu" version="2.10.0" targetFramework="net452" />
   <package id="NUnit" version="3.2.1" targetFramework="net452" />
+  <package id="OctoPack" version="3.0.71" targetFramework="net452" developmentDependency="true" />
   <package id="Selenium.Support" version="2.48.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.48.0" targetFramework="net452" />
 </packages>
