Remove version from nuspec

--- a/SiteFunctionalTests/SiteFunctionalTests.nuspec
+++ b/SiteFunctionalTests/SiteFunctionalTests.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>SiteFunctionalTests</id>
-    <version>1.0.0</version>
+    <version></version>
     <title>SiteFunctionalTests</title>
     <authors>Zachary Toliver</authors>
     <owners>Zachary Toliver</owners>
