--- a/SiteFunctionalTests/SiteFunctionalTests.nuspec
+++ b/SiteFunctionalTests/SiteFunctionalTests.nuspec
@@ -17,5 +17,6 @@
   </metadata>
   <files>
     <file src="bin\Debug\*.*" target="lib" />
+    <file src="bin\Debug\chromedriver.exe" target="lib" />
   </files>
 </package>
