--- a/SiteFunctionalTests/packages.config
+++ b/SiteFunctionalTests/packages.config
@@ -5,4 +5,5 @@
   <package id="OctoPack" version="3.4.1" targetFramework="net452" developmentDependency="true" />
   <package id="Selenium.Support" version="2.48.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.48.0" targetFramework="net452" />
+  <package id="WebDriver.ChromeDriver" version="26.14.313457.1" targetFramework="net452" />
 </packages>
