--- a/SiteFunctionalTests/SiteFunctionalTests.csproj
+++ b/SiteFunctionalTests/SiteFunctionalTests.csproj
@@ -71,6 +71,7 @@
     <None Include="packages.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="SiteFunctionalTests.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestFramework\TestFramework.csproj">
