--- a/SiteFunctionalTests/packages.config
+++ b/SiteFunctionalTests/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Coypu" version="2.10.0" targetFramework="net452" />
-  <package id="NUnit" version="3.2.1" targetFramework="net452" />
+  <package id="NUnit" version="3.4.1" targetFramework="net452" />
   <package id="OctoPack" version="3.4.1" targetFramework="net452" developmentDependency="true" />
-  <package id="Selenium.Support" version="2.48.0" targetFramework="net452" />
-  <package id="Selenium.WebDriver" version="2.48.0" targetFramework="net452" />
-  <package id="WebDriver.ChromeDriver" version="26.14.313457.1" targetFramework="net452" />
+  <package id="Selenium.Support" version="2.53.1" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.23.0.1" targetFramework="net452" />
 </packages>
