--- a/TestFrameworkFunctionalTests/packages.config
+++ b/TestFrameworkFunctionalTests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="FakeItEasy" version="2.2.0" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net452" />
+  <package id="OctoPack" version="3.4.1" targetFramework="net452" developmentDependency="true" />
   <package id="Shouldly" version="2.8.2" targetFramework="net452" />
 </packages>
