--- a/SiteFunctionalTests/SiteFunctionalTests.csproj
+++ b/SiteFunctionalTests/SiteFunctionalTests.csproj
@@ -78,6 +78,12 @@
   <ItemGroup>
     <Content Include="artifact-report.html" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TestFramework\TestFramework.csproj">
+      <Project>{d0e47712-c239-40bc-a293-d4d983e31662}</Project>
+      <Name>TestFramework</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\OctoPack.3.4.1\tools\OctoPack.targets" Condition="Exists('..\packages\OctoPack.3.4.1\tools\OctoPack.targets')" />
   <Target Name="EnsureOctoPackImported" BeforeTargets="BeforeBuild" Condition="'$(OctoPackImported)' == ''">
