--- a/SiteFunctionalTests/packages.config
+++ b/SiteFunctionalTests/packages.config
@@ -3,7 +3,7 @@
   <package id="Coypu" version="2.10.0" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net452" />
   <package id="OctoPack" version="3.4.1" targetFramework="net452" developmentDependency="true" />
-  <package id="Selenium.Support" version="2.53.1" targetFramework="net452" />
-  <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net452" />
+  <package id="Selenium.Support" version="3.0.0-beta3" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="3.0.0-beta3" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.23.0.1" targetFramework="net452" />
 </packages>
