--- a/TestFramework/packages.config
+++ b/TestFramework/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Coypu" version="2.10.0" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net452" />
-  <package id="Selenium.Support" version="2.53.1" targetFramework="net452" />
-  <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net452" />
+  <package id="Selenium.Support" version="3.0.0-beta3" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="3.0.0-beta3" targetFramework="net452" />
 </packages>
